--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "abz-test-task",
   "version": "0.1.0",
+  "homepage": "http://fantom26.github.io/abz-test-task",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "dev": "react-scripts start",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -57,6 +60,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.20",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.1",
